--- a/propertyinspector/overlay.html
+++ b/propertyinspector/overlay.html
@@ -13,46 +13,13 @@
 <body>
   <div class="sdpi-wrapper">
     <div class="sdpi-item">
-      <div class="sdpi-item-label" data-localize="URL">URL</div>
-      <input class="sdpi-item-value" type="text" id="url" value="" required>
+      <div class="sdpi-item-label" data-localize="Token">Token</div>
+      <input class="sdpi-item-value" type="text" id="token" value="" required>
     </div>
 
     <div class="sdpi-item">
-      <div class="sdpi-item-label" data-localize="Method">Method</div>
-      <select class="sdpi-item-value select" id="method" required>
-        <option value="" disabled selected hidden></option>
-        <option value="POST">POST</option>
-        <option value="GET">GET</option>
-        <option value="HEAD">HEAD</option>
-        <option value="PUT">PUT</option>
-        <option value="PATCH">PATCH</option>
-        <option value="DELETE">DELETE</option>
-      </select>
-    </div>
-
-    <div class="sdpi-item">
-      <div class="sdpi-item-label" data-localize="ContentType">Content Type</div>
-      <select class="sdpi-item-value select" id="contentType" required>
-        <option value="" selected></option>
-        <option value="application/json">application/json</option>
-        <option value="application/xml">application/xml</option>
-        <option value="text/plain">text/plain</option>
-        <option value="text/html">text/html</option>
-      </select>
-    </div>
-
-    <div type="textarea" class="sdpi-item" title="Enter each HTTP header on a separate line, with the name and value separated by a colon">
-      <div class="sdpi-item-label" data-localize="Headers">Headers</div>
-      <span class="sdpi-item-value textarea">
-        <textarea type="textarea" rows="1" id="headers" placeholder="Authorization: Bearer [token]"></textarea>
-      </span>
-    </div>
-
-    <div type="textarea" class="sdpi-item">
-      <div class="sdpi-item-label" data-localize="Body">Body</div>
-      <span class="sdpi-item-value textarea">
-        <textarea type="textarea" rows="5" id="body"></textarea>
-      </span>
+      <div class="sdpi-item-label" data-localize="OverlayId">Overlay Id</div>
+      <input class="sdpi-item-value" type="text" id="overlayId" value="" required>
     </div>
   </div>
 
