--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>gg.datagram.web-requests</title>
+    <title>com.flowics.graphics</title>
     <meta charset="UTF-8">
     <script src="propertyinspector/js/common.js"></script>
     <script src="app.js"></script>
