--- a/com.flowics.graphics.sdPlugin/index.html
+++ b/com.flowics.graphics.sdPlugin/index.html
@@ -4,6 +4,7 @@
     <title>com.flowics.graphics</title>
     <meta charset="UTF-8">
     <script src="propertyinspector/js/common.js"></script>
+    <script src="propertyinspector/js/http.js"></script>
     <script src="app.js"></script>
   </head>
 </html>
